@@ -193,9 +193,9 @@ moss客户端主要用于内置预设自研端点和管理配置信息，使接�
 
 #### 2.3.1 Moss-Client
 
-Moss客户端支持两种Spring Boot版本，分别是Spring Boot 1.5.X和Spring Boot 2.X，使用只需引入moss-client-starter即可。示例2.x的客户端如下所示。
+Moss客户端支持两种Spring Boot版本，分别是Spring Boot 1.5.X和Spring Boot 2.X，使用只需引入 moss-client 即可。示例2.x的客户端如下所示。
 
-1.引入moss-client-starter
+1.引入 moss-client
 
 ```xml
 <dependency>
@@ -234,39 +234,13 @@ info.version: @project.version@
 
 #### 2.3.2 导入IDE运行
 
-1.创建数据库moss，执行sql文件:/Moss/doc/sql/moss-init.sql
-
-2. 修改Moss/moss-web/src/main/resources/application.yml文件，数据库链接如下所示:
-
-```yml
-spring:
-  application:
-    name: halo-moss
-  datasource:
-    url: jdbc:mysql://ip:端口/moss?useUnicode=true&characterEncoding=utf8
-    ## 生产用户名和密码
-    username: 用户名
-    password: 密码
-    driver-class-name: com.mysql.jdbc.Driver
-    type: com.alibaba.druid.pool.DruidDataSource
-    filters: stat
-    maxActive: 20
-    initialSize: 1
-    maxWait: 60000
-    minIdle: 1
-    timeBetweenEvictionRunsMillis: 60000
-    minEvictableIdleTimeMillis: 300000
-    validationQuery: select 'x'
-    testWhileIdle: true
-    testOnBorrow: false
-    testOnReturn: false
-    poolPreparedStatements: true
-    maxOpenPreparedStatements: 20
-```
-
-3.运行主程序org.xujin.moss.MossApplication.java
-
-4.启动之后访问http://localhost:8080/，用户名:xujin和密码:123456
+1. 为方便快速演示，默认内置了 h2 数据库。
+3. 导入 IDEA 运行主程序org.xujin.moss.MossApplication.java
+4. 启动之后访问 http://localhost:8086/
+* 用户名 -  xujin
+* 密码 - 123456
+5. 如需修改后端数据库，将 moss-web/src/main/resources/config/application.yml 
+中 `spring.profiles.active` 的 h2 改为 mysql，并修改 application-mysql 中的连接地址、username/password。
 
 
 ## 3.Moss的实现细节
@@ -282,40 +256,27 @@ spring:
 * 注册到Eureka上的应用名为大写，而注册到Nacos上的应用名为小写,Moss需要忽略大小写匹配
 * 等等~~~~~~~~~~~~~
 
-## 4 GC日志路径设置:
+## 4 GC日志路径设置参考
 
--Xloggc:/opt/logs/gc.log -verbose.gc
+`-Xloggc:${YOUR_WORK_DIR}/logs/${APP_NAME}/gc.log -verbose.gc -XX:+PrintGCDateStamps`
 
-### 4.1 切换支持单Nacos
-
-将moss-service/pom.xml中的依赖修改如下
-
-```xml
- <dependency>
-            <groupId>org.xujin.moss</groupId>
-            <artifactId>moss-adapter-multi-eureka</artifactId>
-            <version>1.0.0.RELEASE</version>
-        </dependency>
-```
-修改为
-```xml
-  <dependency>
-             <groupId>org.xujin.moss</groupId>
-             <artifactId>moss-adapter-single-nacos</artifactId>
-             <version>1.0.0.RELEASE</version>
-         </dependency>
+```yaml
+logging:
+  registry:
+    files:
+    - name: gclog
+      path: logs/${spring.application.name}/gc.log
 ```
 
-yml文件配置如下
-```yml
-spring:
-  application:
-    name: halo-moss
-  cloud:
-    nacos:
-      discovery:
-        server-addr: 127.0.0.1:8848
-```
+
+### 4.1 切换支持注册中心
+默认的注册注册中心是 eureka，如果希望切换到其他注册中心，如 ZooKeeper,
+可以通过激活 profile 切换注册中心。在以下 pom 中已预设两种注册中心，使用时自行切换即可。
+
+* moss-web/pom.xml
+* moss-service/pom.xml
+* moss-client/moss-sample-2.1.x
+* moss-client/moss-sample-1.5.x
 
 ## 5.致谢
 
@@ -324,4 +285,3 @@ Moss中的moss-adapter-cloud和moss-core模块部分代码参考了 [Spring Boot
 ## 6.Stargazers over time
  
  [![Stargazers over time](https://starchart.cc/SpringCloud/Moss.svg)](https://starchart.cc/SpringCloud/Moss)
-       
